cmake_minimum_required(VERSION 3.22)

# ---------------------------------------------------------------------------
# Cross-compilation toolchain setup — must come before project()
# Assumes the Arm GNU Toolchain is installed at C:/Arm/arm-none-eabi/
# with binaries in C:/Arm/arm-none-eabi/bin/
# ---------------------------------------------------------------------------
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_SYSTEM_PROCESSOR arm)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

set(ARM_TOOLCHAIN_ROOT "C:/Arm/arm-none-eabi")
set(ARM_TOOLCHAIN_BIN  "${ARM_TOOLCHAIN_ROOT}/bin")
set(TC "${ARM_TOOLCHAIN_BIN}/arm-none-eabi")

set(CMAKE_C_COMPILER   "${TC}-gcc.exe"    CACHE FILEPATH "" FORCE)
set(CMAKE_CXX_COMPILER "${TC}-g++.exe"    CACHE FILEPATH "" FORCE)
set(CMAKE_ASM_COMPILER "${TC}-gcc.exe"    CACHE FILEPATH "" FORCE)
set(CMAKE_OBJCOPY      "${TC}-objcopy.exe")
set(CMAKE_OBJDUMP      "${TC}-objdump.exe")
set(CMAKE_AR           "${TC}-gcc-ar.exe")
set(CMAKE_NM           "${TC}-gcc-nm.exe")

# Inform modm's generated cmake where the toolchain root lives
# (used to locate libstdc++/libgcc)
set(ENV{GCC_PATH} "${ARM_TOOLCHAIN_ROOT}")

# ---------------------------------------------------------------------------
project(blinky CXX C ASM)
# ---------------------------------------------------------------------------

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Required placeholder consumed by the generated modm/CMakeLists.txt
add_library(project_options INTERFACE)

# ---------------------------------------------------------------------------
# modm — generated by lbuild (run "lbuild build" first)
# ---------------------------------------------------------------------------
# modm sources are generated by lbuild from lbuild.xml.
# If the generated tree is absent, attempt to run lbuild automatically.
set(MODM_GENERATED_DIR "${CMAKE_SOURCE_DIR}/modm")

if(NOT EXISTS "${MODM_GENERATED_DIR}/CMakeLists.txt")
    message(STATUS "modm not yet generated – running lbuild …")
    find_program(LBUILD lbuild
        DOC "lbuild code-generator (pip install lbuild)")
    if(NOT LBUILD)
        # lbuild.exe lives in the Python Scripts/ dir which is often absent from
        # VSCode's inherited PATH.  Derive that dir from the interpreter itself.
        find_package(Python3 REQUIRED COMPONENTS Interpreter)
        execute_process(
            COMMAND ${Python3_EXECUTABLE} -c
                    "import sys, pathlib; print(pathlib.Path(sys.executable).parent / 'Scripts')"
            OUTPUT_VARIABLE _py_scripts
            OUTPUT_STRIP_TRAILING_WHITESPACE
        )
        find_program(LBUILD lbuild
            HINTS "${_py_scripts}"
            REQUIRED
            DOC "lbuild code-generator (pip install lbuild)")
        message(STATUS "lbuild found via Python Scripts dir: ${LBUILD}")
    endif()
    execute_process(
        COMMAND           ${LBUILD} build
        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
        RESULT_VARIABLE   _lbuild_rc
        OUTPUT_VARIABLE   _lbuild_out
        ERROR_VARIABLE    _lbuild_err
    )
    if(NOT _lbuild_rc EQUAL 0)
        message(FATAL_ERROR
            "lbuild failed (exit ${_lbuild_rc}).\n"
            "stdout:\n${_lbuild_out}\n"
            "stderr:\n${_lbuild_err}\n"
            "Make sure 'lbuild' is installed and ext/modm is present.")
    endif()
    message(STATUS "modm generated in ${MODM_GENERATED_DIR}")
endif()

# ---------------------------------------------------------------------------
# Patch modm generated data.hpp: add 'inline' to explicit constexpr template
# specializations of AdcChannel/DacChannel.  Without 'inline' these have
# external linkage and violate ODR when the header is included in multiple
# translation units (GCC 15+ enforces this strictly).
# This patch is idempotent and survives re-runs of lbuild.
# ---------------------------------------------------------------------------
set(_data_hpp "${MODM_GENERATED_DIR}/src/modm/platform/gpio/data.hpp")
if(EXISTS "${_data_hpp}")
    file(READ "${_data_hpp}" _data_hpp_content)
    string(REGEX REPLACE
        "template<> constexpr int8_t (AdcChannel|DacChannel)"
        "template<> inline constexpr int8_t \\1"
        _data_hpp_patched
        "${_data_hpp_content}"
    )
    if(NOT _data_hpp_content STREQUAL _data_hpp_patched)
        file(WRITE "${_data_hpp}" "${_data_hpp_patched}")
        message(STATUS "Patched modm data.hpp: added 'inline' to constexpr template specializations")
    endif()
endif()

add_subdirectory("${MODM_GENERATED_DIR}")

# ---------------------------------------------------------------------------
# Pigweed pw_log facade + custom modm backend
# ---------------------------------------------------------------------------
set(PW_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/ext/third_party/pigweed")

# pw_log facade: header-only interface for application code
add_library(pw_log INTERFACE)
target_include_directories(pw_log INTERFACE
    "${PW_ROOT}/pw_log/public"
)

# pw_log backend: routes PW_LOG_* calls through modm's UART logger
add_library(pw_log_modm STATIC
    src/pw_log_modm/log_backend.cc
)
target_include_directories(pw_log_modm
  PUBLIC
    # Provides pw_log_backend/log_backend.h consumed by pw_log/log.h
    src/pw_log_modm/public
  PRIVATE
    "${MODM_GENERATED_DIR}/src"
)
target_link_libraries(pw_log_modm
  PUBLIC
    pw_log
  PRIVATE
    modm_arch_options
    modm_options
    modm_warnings
)

# ---------------------------------------------------------------------------
# Application
# ---------------------------------------------------------------------------
add_executable(blinky src/main.cpp)
target_link_libraries(blinky
    modm
    modm_options
    modm_warnings
    pw_log_modm
)

target_include_directories(blinky PRIVATE
    "modm/src"
)
